Adjust wrapper to avoid flash in dark mode, adjust deploy

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -18,6 +18,9 @@ body
   line-height $lhRegular
   color $textColor
 
+#wrapper
+  min-height 100vh
+
 h1
   font-size $fsLarge
   font-weight 400
